Fix responsiveness on smaller devices (#30)
- Update dependencies
- Reduce hero title font size and padding for smaller devices
- Make "Get started" buttons full-width on smaller devices
- Reduce space between icons in "What is Capact" section
- Reduce space between homepage sections

--- a/src/components/homepage/WhatIs.module.css
+++ b/src/components/homepage/WhatIs.module.css
@@ -1,6 +1,7 @@
 ul.highlights {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 ul.highlights li + li {
@@ -34,7 +35,11 @@ ul.highlights li + li {
 }
 
 @media (max-width: 966px) {
-  .highlights {
+  ul.highlights {
     margin-top: 2rem;
+  }
+
+  .highlightIconWrapper {
+    width: calc(var(--feature-icon-size) / 1.5);
   }
 }
